<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">





    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:id="@+id/menu"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_height="wrap_content">

        <Button
                android:text="@string/start"
                android:textColor="#fff"
                android:background="@drawable/main_button_shape"
                android:foreground="@drawable/main_button_ripple"
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_height="wrap_content" android:id="@+id/startButton"/>
        <Button
                android:text="@string/tracks_online"
                android:textColor="#fff"
                android:background="@drawable/main_button_shape"
                android:foreground="@drawable/main_button_ripple"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tracksButton"
        />
        <Button
                android:text="@string/my_tracks"
                android:textColor="#fff"
                android:background="@drawable/main_button_shape"
                android:foreground="@drawable/main_button_ripple"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/myTracksButton"
        />
        <Button
                android:text="@string/statistics"
                android:textColor="#fff"
                android:background="@drawable/main_button_shape"
                android:foreground="@drawable/main_button_ripple"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/statisticsButton"
        />
        <Button
                android:text="@string/settings"
                android:textColor="#fff"
                android:background="@drawable/main_button_shape"
                android:foreground="@drawable/main_button_ripple"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/settingsButton"
        />


    </LinearLayout>

    <ImageView android:layout_width="wrap_content"
               app:layout_constraintTop_toBottomOf="@id/menu"
               android:layout_marginTop="20dp"
               android:src="@mipmap/ic_launcher_foreground"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>