<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
>


    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
                                                       android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content"
                  android:text="@string/statistics"
                  android:textColor="#000000"
                  android:textSize="30dp"
                  android:id="@+id/title"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="30dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_height="wrap_content"/>

        <LinearLayout android:layout_width="0dp"
                      android:orientation="vertical"
                      app:layout_constraintTop_toBottomOf="@id/title"
                      android:id="@+id/first_part"
                      android:gravity="center"
                      android:layout_marginTop="40dp"
                      android:layout_marginRight="20dp"
                      android:layout_marginLeft="40dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toStartOf="@id/second_part"
                      android:background="@color/colorPrimaryDark"
                      app:layout_constraintDimensionRatio="2:1"
                      android:layout_height="0dp">

            <TextView android:layout_width="match_parent"
                      android:textColor="#bbb"
                      android:text="@string/total_distance"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="match_parent"
                      android:textColor="#fff"
                      android:id="@+id/run_km"
                      android:text="0"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:orientation="vertical"
                      android:layout_marginLeft="20dp"
                      android:layout_marginRight="40dp"
                      app:layout_constraintTop_toTopOf="@id/first_part"
                      android:id="@+id/second_part"
                      android:gravity="center"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toEndOf="@id/first_part"
                      android:background="@color/colorPrimaryDark"
                      app:layout_constraintDimensionRatio="2:1"
                      android:layout_height="0dp">
            <TextView android:layout_width="match_parent"
                      android:textColor="#bbb"
                      android:text="@string/total_time"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="match_parent"
                      android:textColor="#fff"
                      android:id="@+id/run_time"
                      android:text="0"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
                      android:orientation="vertical"
                      app:layout_constraintTop_toBottomOf="@id/first_part"
                      android:id="@+id/third_part"
                      android:gravity="center"
                      android:layout_marginTop="40dp"
                      android:layout_marginRight="20dp"
                      android:layout_marginLeft="40dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toStartOf="@id/fourth_part"
                      android:background="@color/colorPrimaryDark"
                      app:layout_constraintDimensionRatio="2:1"
                      android:layout_height="0dp">

            <TextView android:layout_width="match_parent"
                      android:textColor="#bbb"
                      android:text="@string/average_speed"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="match_parent"
                      android:textColor="#fff"
                      android:id="@+id/average_speed"
                      android:text="0"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:orientation="vertical"
                      android:layout_marginLeft="20dp"
                      android:layout_marginRight="40dp"
                      app:layout_constraintTop_toTopOf="@id/third_part"
                      android:id="@+id/fourth_part"
                      android:gravity="center"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toEndOf="@id/third_part"
                      android:background="@color/colorPrimaryDark"
                      app:layout_constraintDimensionRatio="2:1"
                      android:layout_height="0dp">
            <TextView android:layout_width="match_parent"
                      android:textColor="#bbb"
                      android:text="@string/total_runs"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="match_parent"
                      android:textColor="#fff"
                      android:id="@+id/run_tracks"
                      android:text="0"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>
        </LinearLayout>


        <Button android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/fourth_part"
                android:layout_marginTop="20dp"
                android:text="@string/see_all_statistics"
                android:id="@+id/all_stat_button"
                android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>






</FrameLayout>