<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".activities.TrackScreenActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/map"
              android:layout_weight="1.5"
              tools:context=".activities.MapsActivity"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <LinearLayout android:layout_width="match_parent"

                  android:orientation="vertical"
                  android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_weight="1"
                      android:background="#fff"
                      android:paddingTop="20dp"
                      android:orientation="vertical"
                      android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_marginStart="20dp"
                          android:layout_marginTop="0dp"
                          android:layout_marginEnd="20dp"
                          android:layout_weight="1"
                          android:gravity="center"
                          android:layout_height="0dp">

                <TextView android:layout_width="wrap_content"
                          android:textSize="30dp"
                          android:text="@string/name_twodots"
                          android:layout_height="wrap_content"/>

                <EditText android:layout_width="fill_parent"
                          android:id="@+id/name"
                          android:maxLength="15"
                          android:layout_marginLeft="10dp"
                          android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_marginStart="20dp"
                          android:layout_marginTop="40dp"
                          android:layout_marginEnd="20dp"

                          android:gravity="center"
                          android:layout_height="wrap_content">

                <RadioGroup
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:id="@+id/radio_group"
                        android:layout_height="match_parent">
                    <RadioButton
                            android:text="@string/easy"
                            android:layout_width="0dp"
                            android:gravity="center"
                            android:layout_height="wrap_content" android:id="@+id/radioButton" android:layout_weight="1"/>
                    <RadioButton
                            android:text="@string/medium"
                            android:gravity="center"
                            android:checked="true"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/radioButton2" android:layout_weight="1"/>
                    <RadioButton
                            android:text="@string/hard"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/radioButton3" android:layout_weight="1"/>
                </RadioGroup>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_marginStart="20dp"
                          android:layout_marginTop="40dp"
                          android:layout_marginEnd="20dp"
                          android:layout_weight="1.5"
                          android:gravity="center"
                          android:layout_height="0dp">

                <ImageButton android:layout_width="0dp"
                             android:layout_weight="1"
                             android:id="@+id/city_button"
                             android:src="@drawable/city"
                             android:layout_margin="3dp"
                             android:foreground="@drawable/shape_ripple"
                             android:padding="5dp"
                             android:scaleType="fitCenter"
                             android:adjustViewBounds="true"
                             android:background="@drawable/button_background"
                             android:layout_height="wrap_content"/>
                <ImageButton android:layout_width="0dp"
                             android:layout_weight="1"
                             android:id="@+id/mountain_button"
                             android:src="@drawable/mountain"
                             android:layout_margin="3dp"
                             android:foreground="@drawable/shape_ripple"
                             android:padding="5dp"
                             android:scaleType="fitCenter"
                             android:adjustViewBounds="true"
                             android:background="#00000000"
                             android:layout_height="wrap_content"/>
                <ImageButton android:layout_width="0dp"
                             android:layout_weight="1"
                             android:scaleType="fitCenter"
                             android:id="@+id/lake_button"
                             android:layout_margin="3dp"
                             android:foreground="@drawable/shape_ripple"
                             android:padding="5dp"
                             android:adjustViewBounds="true"
                             android:src="@drawable/lake"
                             android:background="#00000000"
                             android:layout_height="wrap_content"/>
                <ImageButton android:layout_width="0dp"
                             android:layout_weight="1"
                             android:src="@drawable/field"
                             android:layout_margin="3dp"
                             android:padding="5dp"
                             android:foreground="@drawable/shape_ripple"
                             android:id="@+id/field_button"
                             android:scaleType="fitCenter"
                             android:adjustViewBounds="true"
                             android:background="#00000000"
                             android:layout_height="wrap_content"/>
                <ImageButton android:layout_width="0dp"
                             android:layout_weight="1"
                             android:scaleType="fitCenter"
                             android:layout_margin="3dp"
                             android:foreground="@drawable/shape_ripple"
                             android:padding="5dp"
                             android:id="@+id/forest_button"
                             android:adjustViewBounds="true"
                             android:src="@drawable/forest"
                             android:background="#00000000"
                             android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:gravity="bottom"

                      android:layout_height="wrap_content">



            <Button android:layout_width="match_parent"
                    android:text="@string/send"
                    android:layout_marginTop="40dp"
                    android:foreground="@drawable/ripple_corners"
                    android:background="#4CAF50"
                    android:id="@+id/send_button"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content"/>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>